adding style to h1 style.css

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
 body {
   background-image: url("../images/stars.jpeg");
 }
+#header h1 {
+  top:5px;
+  font-size: 3em;
+  font-family: 'Devonshire', cursive;
+  color: "white";
+}
