--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   background-image: url("../images/stars.jpeg");
 }
-#header h1 {
+td {
   top:5px;
   font-size: 3em;
   font-family: 'Devonshire', cursive;
