--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@ body {
 }
 td {
   top:5px;
-  font-size: 3em;
+  font-size: 0.5em;
   font-family: 'Devonshire', cursive;
-  color: "white";
+  bgcolor= "white";
+
 }
