--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,15 @@ td {
   top:5px;
   font-size: 0.5em;
   font-family: 'Devonshire', cursive;
-  bgcolor= "white";
-
+}
+tr {
+  bgcolor="white";
+}
+.image-p {
+  float: right;
+  border: 2px solid blue;
+  width: 300px;
+  padding: 5px;
+  background-color: white;
+  margin: 10px 0 10px 20px;
 }
