--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,11 @@ td {
   top:5px;
   font-size: 1em;
   font-family: 'Devonshire', cursive;
-  text-align: "center";
+}
+td img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 tr {
   background-color: white;
