--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 body {
   background-image: url("../images/stars.jpeg");
 }
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
 h1 {
   top: 20px;
   font-size: 3em;
