--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ h1 {
   font-size: 3em;
   font-family: 'Georgia', cursive;
   color: white;
+  margin-left: auto;
+  margin-right: auto;
 }
 td {
   top:5px;
