--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,7 @@ h1 {
   font-size: 3em;
   font-family: 'Georgia', cursive;
   color: white;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
 td {
   top:5px;
